# transaction-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: transactions.csv
src/: agent.py  app.py  data.py  guardrails.py  tools.py
tests/: test_data.py
