[project]
name = "transaction-chatbot"
version = "0.1.0"
description = "PoC: Lloyds transaction chatbot — AI Tech Lead take-home exercise"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.34",
    "langgraph>=0.2.30",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
